tests/paczka1/fuzzy1/58046913.err
Error in line 15: S378 SC13 37,8
Error in line 3: JdMqk5 S413 87,1
Error in line 16: JdMqk5 S618 24,6
Error in line 7: S378 S413 99,4
Error in line 17: JdMqk5 S378 77,6
Error in line 26: pBBa3 A690 87,5
Error in line 22: S378 S618 9,6
Error in line 36: JdMqk5 S413 78,80
Error in line 32: SD27B S618 10,2
